# Abyssal.fi

./: .env.example  .gitignore  .vercelignore  Anchor.toml  CLAUDE.md  tsconfig.json
assets/: ablp-metadata.json  usdc-metadata.json
frontend/: .env.production  .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json
iv_engine/: afvr_calculator.py  config.py  iv_surface.py  keeper.py  main.py  pacifica_client.py  requirements.txt
programs/pacifica_options/: Cargo.toml
programs/pacifica_options/src/: error.rs  lib.rs
programs/pacifica_options/src/instructions/: add_liquidity.rs  buy_option.rs  cancel_listing.rs  close_orphan.rs  ensure_series.rs  exercise_option.rs  fill_resale_listing.rs  fill_written_listing.rs  initialize_vault.rs  list_for_resale.rs  mint_option_nft.rs  mod.rs  rebalance_delta.rs  remove_liquidity.rs  sell_option.rs  settle_expired.rs  settle_written_option.rs  update_iv_params.rs  vault_liquidity.rs  write_option_listing.rs
programs/pacifica_options/src/math/: black_scholes.rs  fixed_point.rs  greeks.rs  mod.rs
programs/pacifica_options/src/state/: amm_pool.rs  iv_oracle.rs  listing.rs  mod.rs  position.rs  price_buffer.rs  vault.rs
scripts/: add_vlp_metadata.ts  check_bal_processed.ts  check_balance.ts  check_filler_usdp.ts  check_hc53.ts  check_mint.ts  check_tx.ts  check_usdp_auth_kp.ts  check_usdp_mint.ts  check_user.ts  check_user_filler.ts  check_vault.ts  cleanup_orphans.ts  create_filler.ts  debug_close.ts  find_usdp.ts  find_usdp_holders.ts  fix_oi.ts  init_protocol.ts  (+11 more)
(+108 files in other folders)
