[package]
name = "pacifica_options"
version = "0.1.0"
edition = "2021"
description = "Decentralized options market built on Pacifica perpetuals on Solana"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "pacifica_options"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token"] }

[dev-dependencies]
anchor-client = "0.30.1"
